Laddning, formatering- nya metoder innan feltestning